# secure-x

./: .gitignore  Cargo.toml  README.md  conf.toml
secure-x/: Cargo.toml  build.rs  justfile
secure-x-common/: Cargo.toml
secure-x-common/src/: lib.rs
secure-x-ebpf/: Cargo.toml
secure-x-ebpf/src/: anti_debugging.rs  firewall.rs  main.rs  utils.rs
secure-x/src/: conf.rs  ebpf.rs  error.rs  main.rs
